68824366 Spacing issue when viewing Forum tab

--- a/docroot/sites/all/modules/custom/sbac_forum/sass/sbac_forum.scss
+++ b/docroot/sites/all/modules/custom/sbac_forum/sass/sbac_forum.scss
@@ -68,7 +68,7 @@ $gray: #464B54;
   background: #c9eaf8;
   color: #0684ad;
   padding: 45px 0 0;
-  border-top: 2px solid #0684ad;
+  /*border-top: 2px solid #0684ad;*/
   /*border-bottom: 1px solid #94d8f3;*/
 	border-bottom: 1px solid #056382;
   position: relative;
